# Monero-for-android

./: README.md
MoneroTest/: build.gradle
MoneroTest/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
MoneroTest/app/src/androidTest/java/com/monero/android/monerotest/: ExampleInstrumentedTest.java
MoneroTest/app/src/main/: AndroidManifest.xml
MoneroTest/app/src/main/cpp/: native-lib.cpp
MoneroTest/app/src/main/java/com/monero/android/monerotest/: MainActivity.java
MoneroTest/app/src/main/res/layout/: activity_main.xml
MoneroTest/app/src/test/java/com/monero/android/monerotest/: ExampleUnitTest.java
MoneroTest/gradle/wrapper/: gradle-wrapper.properties
tools/: .aaa.swp  _shared.sh  android-build  build-openssl4android.sh  clean
